# caliptra-dpe

./: .gitignore  .taplo.toml  Cargo.toml  README.md  ci.sh  failed  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-visualizer.yml  license.yml  nightly.yml  rust.yml  verification.yml
ci-tools/: file-header-fix.sh
ci-tools/panic-handler-check/: Cargo.toml  README.md
ci-tools/panic-handler-check/src/: main.rs
common/: Cargo.toml
common/src/: error_code.rs  lib.rs  tci.rs  x509.rs
crypto/: Cargo.toml  build.rs
crypto/src/: dummy.rs  hkdf.rs  lib.rs  ml_dsa.rs  openssl.rs  rustcrypto.rs  signer.rs
crypto/src/ecdsa/: mod.rs
dpe/: Cargo.toml  build.rs  cbindgen.toml  dpe_abi_hybrid.h  dpe_abi_p256.h  dpe_abi_p384.h  runtime_dpe_dpe_fuzz_harness.rs
dpe/afl/: Cargo.toml  readme.md
dpe/afl/src/: fuzz_target_1.rs
dpe/common_corpus/: Untitled11  Untitled12  Untitled19  Untitled21
dpe/fuzz/: Cargo.toml  readme.md
dpe/fuzz/fuzz_targets/: fuzz_target_1.rs  runtime_dpe_dpe_fuzz_harness.rs
dpe/fuzz/src/: fuzz_target_1.rs
dpe/include/: caliptra_dpe.h
dpe/src/: asn1.rs  bitmap.rs  commands.rs  context.rs  crypto.rs  dpe_instance.rs  error.rs  lib.rs  log_stub.rs  oid.rs  operation_handle.rs  response.rs  state.rs  support.rs  tci.rs  validation.rs  x509.rs
dpe/src/commands/: certify_csr.rs  certify_key.rs  derive_child.rs  derive_context.rs  destroy_context.rs  extend_tci.rs  get_certificate_chain.rs  get_profile.rs  get_tagged_tci.rs  initialize_context.rs  mod.rs  rotate_context.rs  sign.rs  sign_with_exported.rs  tag_tci.rs  update_context_measurement.rs
dpe/src/x509/: asn1.rs  internal.rs  mod.rs  pkcs10.rs  x509.rs
ossl_crypto/: Cargo.toml
ossl_crypto/src/: lib.rs
platform/: Cargo.toml  build.rs
platform/src/: default.rs  dummy.rs  lib.rs  printer.rs
platform/src/test_data/: cert.pem  cert_256.der  cert_256.pem  cert_384.der  cert_384.pem  cert_mldsa_87.der  cert_mldsa_87.pem  generate.sh  key.pem  key_256.der  key_256.pem  key_384.der  key_384.pem  key_mldsa_87.der  key_mldsa_87.pem
response-buffer/: Cargo.toml
response-buffer/src/: lib.rs
simulator/: Cargo.toml  README.md
simulator/src/: main.rs
test-artifacts/: Cargo.toml  build.rs
test-artifacts/src/: lib.rs
tools/: Cargo.toml  README.md  build.rs  index.html
tools/src/: cert_size.rs  lib.rs  sample_dpe_cert.rs
tools/src/cert_size/: benchmark.rs  main.rs
verification/: Cargo.toml  Makefile  README.md  abi.go  certifyKey.go  certifyKey_test.go  certs.go  client.go  deriveChild.go  deriveChild_test.go  emulator.go  errors.go  extendTCI.go  getCertificateChain.go  getCertificateChain_test.go  getProfile.go  getProfile_test.go  go.mod  go.sum  helpers.go  initializeContext.go  initializeContext_test.go  negativeCases.go  profile.go  rotateContextHandle.go  sign.go  simulator.go  spdm.go  tagTCI.go  tagTCI_test.go  tpm.go  transport.go  verification.go  verification_test.go
verification/cert_parser/: README.md  dice_extensions.py  pyproject.toml  run_tests.sh  test_certs.py
verification/client/: abi.go  client.go  errors.go  go.mod  helpers.go  profile.go  transport.go
verification/examples/spdm/: CMakeLists.txt
verification/examples/spdm/spdm_caliptra/spdm_caliptra_common/: command.c  command.h  key.c  nv_storage.c  pcap.c  spdm_caliptra.c  spdm_caliptra.h  support.c
verification/examples/spdm/spdm_caliptra/spdm_caliptra_requester/: CMakeLists.txt  spdm_caliptra_requester.c  spdm_caliptra_requester.h  spdm_caliptra_requester_authentication.c  spdm_requester_mctp.c  spdm_requester_session.c  spdm_requester_spdm.c
verification/examples/spdm/spdm_caliptra/spdm_caliptra_responder/: CMakeLists.txt  spdm_caliptra_cert.c  spdm_caliptra_responder.c  spdm_caliptra_responder.h  spdm_responder_mctp.c  spdm_responder_session.c  spdm_responder_spdm.c
verification/panic-check/: Cargo.toml  README.md
verification/panic-check/checker/: Cargo.toml
verification/panic-check/checker/src/: lib.rs
verification/panic-check/firmware/: Cargo.toml
verification/panic-check/firmware/src/: crypto_dummy.rs  main.rs  platform_dummy.rs
verification/panic-check/src/: main.rs
verification/sim/: go.mod  transport.go
verification/testing/: certifyKey.go  certs.go  deriveContext.go  extendTCI.go  getCertificateChain.go  getProfile.go  go.mod  go.sum  initializeContext.go  negativeCases.go  rotateContextHandle.go  sign.go  sign_raw.go  sign_with_exported.go  simulator.go  tpm.go  verification.go  verification_test.go
x509/: Cargo.toml
x509/src/: lib.rs  tci.rs  x509.rs
xtask/: Cargo.toml
xtask/src/: main.rs  symbol_checker.rs  test.rs
zephyr/: CMakeLists.txt  Kconfig  empty.c  module.yml
