# Licensed under the Apache-2.0 license

[workspace]
resolver = "2"

members = [
  "dpe",
  "crypto",
  "platform",
  "simulator",
  "tools",
  "xtask",
  "test-artifacts",
  "verification/panic-check/firmware",
  "verification/panic-check/checker",
]

[workspace.package]
authors = ["Caliptra DPE Project"]
edition = "2021"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.70"
arrayvec = { version = "0.7.4", default-features = false, features = [
  "zeroize",
] }
caliptra-cfi-derive = { git = "https://github.com/chipsalliance/caliptra-cfi.git", package = "caliptra-cfi-derive", rev = "72c75dc70cde4120a9ce149d4f5cb21621399958" }
caliptra-cfi-lib = { git = "https://github.com/chipsalliance/caliptra-cfi.git", package = "caliptra-cfi-lib", rev = "72c75dc70cde4120a9ce149d4f5cb21621399958", default-features = false }
caliptra-dpe = { path = "dpe", default-features = false }
caliptra-dpe-crypto = { path = "crypto", default-features = false }
caliptra-dpe-platform = { path = "platform", default-features = false }
caliptra-dpe-test-artifacts = { path = "test-artifacts" }
cfg-if = "1.0.0"
clap = { version = "4.3", features = ["derive"] }
constant_time_eq = "0.3.0"
ufmt = { git = "https://github.com/korran/ufmt.git", rev = "1d0743c1ffffc68bc05ca8eeb81c166192863f33", features = [
  "inline",
] }
x509-cert = "0.2.4"
zerocopy = { version = "0.8.17", features = ["derive"] }
zeroize = { version = "1.8.2", default-features = false, features = [
  "zeroize_derive",
] }

[profile.firmware]
codegen-units = 1
inherits = "release"
lto = true
opt-level = "s"
panic = "abort"

[profile.firmware-check]
codegen-units = 1
debug = 1
inherits = "release"
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "none"
