# Licensed under the Apache-2.0 license

[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[features]
rustcrypto = ["dep:hkdf", "dep:p256", "dep:p384", "dep:rand", "dep:sha2", "dep:base64ct", "dep:ecdsa", "dep:sec1"]
ml-dsa = ["dep:ml-dsa", "dep:pkcs8"]
deterministic_rand = ["dep:rand"]
no-cfi = []

[dependencies]
arrayvec = { version = "0.7.4", default-features = false, features = ["zeroize"] }
caliptra-cfi-lib-git = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive-git.workspace = true
ecdsa = { version = "0.16.9", optional = true, features = ["pem"]}
hkdf = { version = "0.12.3", optional = true }
p256 = {version= "0.13.2", optional = true}
p384 = {version= "0.13.0", optional = true}
rand = { version = "0.8.5", optional = true }
sec1 = {version="0.7.3", optional = true}
sha2 = { version = "0.10.6", optional = true }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
ml-dsa = { version = "0.0.4", optional = true, features = ["pkcs8", "alloc"]}
pkcs8 = { version = "0.10.2", optional = true, features = ["pem", "alloc"] }

[dev-dependencies]
strum = "0.24"
strum_macros = "0.24"

[build-dependencies]
ml-dsa = { version = "0.0.4", optional = true, features = ["pkcs8", "alloc"]}
pkcs8 = { version = "0.10.2", optional = true, features = ["pem", "alloc"] }
rand = {version = "0.8.5", optional = true}
p256 = {version= "0.13.2", optional = true}
p384 = {version= "0.13.0", optional = true}
ecdsa = { version = "0.16.9", optional = true, features = ["pem"]}
base64ct = {version= "1.6.0", optional= true}
sec1 = {version="0.7.3", optional = true}
