# Licensed under the Apache-2.0 license

[package]
name = "dpe"
version = "0.1.0"
edition = "2021"

[features]
default = ["dpe_profile_p256_sha256", "no-cfi"]
dpe_profile_p256_sha256 = ["platform/dpe_profile_p256_sha256"]
dpe_profile_p384_sha384 = ["platform/dpe_profile_p384_sha384"]
# Run ARBITRARY_MAX_HANDLES=n cargo build --features arbitrary_max_handles to use this feature
arbitrary_max_handles = []
disable_simulation = []
disable_recursive = []
disable_auto_init = []
disable_rotate_context = []
disable_x509 = []
disable_csr = []
disable_is_symmetric = []
disable_internal_info = []
disable_internal_dice = []
disable_is_ca = []
disable_retain_parent_context = []
no-cfi = ["crypto/no-cfi"]

[dependencies]
bitflags = "2.4.0"
caliptra-cfi-lib-git = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive-git.workspace = true
constant_time_eq = "0.3.0"
crypto = {path = "../crypto", default-features = false}
der = { version = "0.7.9", default-features = false, features = ["derive"] }
platform = {path = "../platform", default-features = false}
ufmt = { git = "https://github.com/korran/ufmt.git", rev = "1d0743c1ffffc68bc05ca8eeb81c166192863f33", features = ["inline"] }
zerocopy.workspace = true
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
cfg-if = "1.0.0"

[dev-dependencies]
asn1 = { version = "0.13.0", default-features = false}
caliptra-cfi-lib-git = { workspace = true, features = ["cfi-test"] }
openssl.workspace = true
x509-parser = "0.15.1"
crypto = {path = "../crypto", features = ["deterministic_rand", "openssl"]}
platform = {path = "../platform", default-features = false, features = ["openssl"]}
cms = "0.2.2"
spki = "0.7.2"
rand = "0.8.5"
