# Licensed under the Apache-2.0 license

[package]
name = "dpe"
version = "0.1.0"
edition = "2021"

[features]
default = ["p256", "no-cfi"]
p256 = []
p384 = []
ml-dsa = ["crypto/ml-dsa"]
hybrid = ["p384", "ml-dsa"]
# Run ARBITRARY_MAX_HANDLES=n cargo build --features arbitrary_max_handles to use this feature
arbitrary_max_handles = []
disable_simulation = []
disable_recursive = []
disable_auto_init = []
disable_rotate_context = []
disable_x509 = []
disable_csr = []
disable_internal_info = []
disable_internal_dice = []
disable_retain_parent_context = []
disable_export_cdi = []
no-cfi = ["crypto/no-cfi"]
log = ["dep:log"]

[dependencies]
bitflags = "2.4.0"
caliptra-cfi-lib-git = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive-git.workspace = true
constant_time_eq = "0.3.0"
crypto = {path = "../crypto", default-features = false}
platform = {path = "../platform", default-features = false}
ufmt = { git = "https://github.com/korran/ufmt.git", rev = "1d0743c1ffffc68bc05ca8eeb81c166192863f33", features = ["inline"] }
zerocopy.workspace = true
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
cfg-if = "1.0.0"
log = { version = "0.4.28", optional = true }

[dev-dependencies]
asn1 = "0.13.0"
caliptra-cfi-lib-git = { workspace = true, features = ["cfi-test"] }
x509-parser = "0.15.1"
crypto = {path = "../crypto", features = ["deterministic_rand", "rustcrypto"]}
platform = {path = "../platform", default-features = false, features = ["rustcrypto"]}
cms = "0.2.2"
der = "0.7.8"
spki = "0.7.2"
rand = "0.8.5"
openssl = "0.10.64"
flexi_logger = "0.31.7"
