# Licensed under the Apache-2.0 license

[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[features]
default = ["openssl", "rustcrypto"]
openssl = ["dep:openssl"]
rustcrypto = ["dep:x509-cert"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false, features = ["zeroize"] }
cfg-if = "1.0.0"
openssl = {workspace = true, optional = true}
ufmt = { git = "https://github.com/korran/ufmt.git", rev = "1d0743c1ffffc68bc05ca8eeb81c166192863f33", features = ["inline"] }
x509-cert = {version = "0.2.4", optional = true}
