# Licensed under the Apache-2.0 license

[package]
name = "caliptra-dpe-platform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
rustcrypto = ["caliptra-dpe-crypto/test-artifacts", "dep:x509-cert"]
# Run ARBITRARY_ISSUER_NAME_SIZE=n cargo build --features arbitrary_issuer_name_size to use this feature
arbitrary_issuer_name_size = []

[dependencies]
arrayvec.workspace = true
cfg-if.workspace = true
ufmt.workspace = true
caliptra-dpe-crypto = { workspace = true, default-features = false }
x509-cert = { workspace = true, optional = true }

[dev-dependencies]
