# Licensed under the Apache-2.0 license

[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "caliptra-dpe-platform"
publish.workspace = true
version.workspace = true

[features]
default = []
rustcrypto = ["caliptra-dpe-crypto/test-artifacts", "dep:x509-cert"]
# Run ARBITRARY_ISSUER_NAME_SIZE=n cargo build --features arbitrary_issuer_name_size to use this feature
arbitrary_issuer_name_size = []

[dependencies]
arrayvec.workspace = true
caliptra-dpe-crypto = { workspace = true, default-features = false }
cfg-if.workspace = true
ufmt.workspace = true
x509-cert = { workspace = true, optional = true }

[dev-dependencies]
