# Licensed under the Apache-2.0 license

[package]
name = "caliptra-dpe-simulator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["p384", "rustcrypto"]
p256 = ["caliptra-dpe/p256"]
p384 = ["caliptra-dpe/p384"]
# TODO(clundin): Placeholder name until we decide pattern for DPE profiles and feature flags.
ml-dsa = ["caliptra-dpe/ml-dsa"]
rustcrypto = ["caliptra-dpe-crypto/rustcrypto"]
cfi = ["caliptra-dpe/cfi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
clap.workspace = true
log = "0.4.17"
env_logger = "0.10.0"
caliptra-dpe = { workspace = true, default-features = false }
caliptra-dpe-crypto = { workspace = true, default-features = false }
caliptra-dpe-platform = { workspace = true, default-features = false, features = ["rustcrypto"] }
