# Licensed under the Apache-2.0 license

[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "caliptra-dpe-simulator"
publish.workspace = true
version.workspace = true

[features]
default = ["p384", "rustcrypto"]
p256 = ["caliptra-dpe/p256"]
p384 = ["caliptra-dpe/p384"]
# TODO(clundin): Placeholder name until we decide pattern for DPE profiles and feature flags.
cfi = ["caliptra-dpe/cfi"]
ml-dsa = ["caliptra-dpe/ml-dsa"]
rustcrypto = ["caliptra-dpe-crypto/rustcrypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-dpe = { workspace = true, default-features = false }
caliptra-dpe-crypto = { workspace = true, default-features = false }
caliptra-dpe-platform = { workspace = true, default-features = false, features = [
  "rustcrypto",
] }
clap.workspace = true
ctrlc = { version = "3.0", features = ["termination"] }
env_logger = "0.10.0"
log = "0.4.17"
