# Licensed under the Apache-2.0 license

[package]
name = "caliptra-dpe-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["p384"]
# Run ARBITRARY_MAX_HANDLES=n cargo build --features arbitrary_max_handles to use this feature
arbitrary_max_handles = ["caliptra-dpe/arbitrary_max_handles"]
p256 = ["caliptra-dpe/p256"]
p384 = ["caliptra-dpe/p384"]
# TODO(clundin): Placeholder name until we decide pattern for DPE profiles and feature flags.
ml-dsa = [
  "caliptra-dpe/ml-dsa"
]
hybrid = ["p384", "ml-dsa"]
cfi = ["caliptra-dpe/cfi"]

[dependencies]
anyhow.workspace = true
caliptra-dpe = { workspace = true, default-features = false }
clap.workspace = true
caliptra-dpe-crypto = { workspace = true, default-features = false, features = ["deterministic_rand", "rustcrypto"] }
pem = "2"
caliptra-dpe-platform = { workspace = true, default-features = false, features = ["rustcrypto"] }
zerocopy.workspace = true


[[bin]]
name = "sample_dpe_cert"
path = "src/sample_dpe_cert.rs"
target = 'cfg("test")'

[[bin]]
name = "cert-size"
path = "src/cert_size.rs"
