# Licensed under the Apache-2.0 license

[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "caliptra-dpe-tools"
publish.workspace = true
version.workspace = true

[features]
default = ["p384"]
# Run ARBITRARY_MAX_HANDLES=n cargo build --features arbitrary_max_handles to use this feature
arbitrary_max_handles = ["caliptra-dpe/arbitrary_max_handles"]
p256 = ["caliptra-dpe/p256"]
p384 = ["caliptra-dpe/p384"]
# TODO(clundin): Placeholder name until we decide pattern for DPE profiles and feature flags.
cfi = ["caliptra-dpe/cfi"]
hybrid = ["p384", "ml-dsa"]
ml-dsa = ["caliptra-dpe/ml-dsa"]

[dependencies]
anyhow.workspace = true
caliptra-dpe = { workspace = true, default-features = false }
caliptra-dpe-crypto = { workspace = true, default-features = false, features = [
  "deterministic_rand",
  "rustcrypto",
] }
caliptra-dpe-platform = { workspace = true, default-features = false, features = [
  "rustcrypto",
] }
clap.workspace = true
pem = "2"
zerocopy.workspace = true


[[bin]]
name = "sample_dpe_cert"
path = "src/sample_dpe_cert.rs"
target = 'cfg("test")'

[[bin]]
name = "cert-size"
path = "src/cert_size.rs"
