# Licensed under the Apache-2.0 license

[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "caliptra-dpe-tools"
publish.workspace = true
version.workspace = true

[features]
default = ["p384"]
# Run ARBITRARY_MAX_HANDLES=n cargo build --features arbitrary_max_handles to use this feature
arbitrary_max_handles = ["caliptra-dpe/arbitrary_max_handles"]
p256 = ["caliptra-dpe/p256"]
p384 = ["caliptra-dpe/p384"]
# TODO(clundin): Placeholder name until we decide pattern for DPE profiles and feature flags.
cfi = ["caliptra-dpe/cfi"]
hybrid = ["p384", "ml-dsa"]
ml-dsa = ["caliptra-dpe/ml-dsa"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
asn1 = "0.13.0"
clap.workspace = true
cms = "0.2"
der = "0.7"
pem = "2"
x509-parser = "0.15.1"
zerocopy.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
caliptra-dpe = { workspace = true, default-features = false }
caliptra-dpe-crypto = { workspace = true, default-features = false, features = [
  "deterministic_rand",
  "rustcrypto",
] }
caliptra-dpe-platform = { workspace = true, default-features = false, features = [
  "rustcrypto",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.114"


[build-dependencies]
caliptra-dpe = { workspace = true, default-features = false, features = [
  "p384",
] }
caliptra-dpe-crypto = { workspace = true, default-features = false, features = [
  "deterministic_rand",
  "rustcrypto",
] }
caliptra-dpe-platform = { workspace = true, default-features = false, features = [
  "rustcrypto",
] }
pem = "2"
zerocopy.workspace = true

[[bin]]
name = "sample_dpe_cert"
path = "src/sample_dpe_cert.rs"

[[bin]]
name = "cert-size"
path = "src/cert_size/main.rs"
