# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
elf = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
