# Licensed under the Apache-2.0 license

[package]
name = "panic-handler-check"
description = "Binary package to check that dpe doesn't require a panic handler"
version = "0.1.0"
edition = "2024"

[dependencies]
dpe = { path = "../../dpe" , default-features = false, features = ["p256"] }
platform = { path = "../../platform", default-features = false, features = ["rustcrypto"] }
crypto = { path = "../../crypto", default-features = false, features = ["rustcrypto"] }
no-panic = "0.1"

