# Licensed under the Apache-2.0 license

[package]
name = "panic-handler-check"
description = "Binary package to check that dpe doesn't require a panic handler"
version = "0.1.0"
edition = "2024"

[features]
default = ["p384"]
p256 = ["dpe/p256"]
p384 = ["dpe/p384"]
ml-dsa = ["dpe/ml-dsa"]

[dependencies]
dpe = { path = "../../dpe" , package = "caliptra-dpe", default-features = false }
platform = { path = "../../platform", package = "caliptra-dpe-platform", default-features = false }
crypto = { path = "../../crypto", package = "caliptra-dpe-crypto", default-features = false, features = ["dummy"] }
no-panic = "0.1"

