# Licensed under the Apache-2.0 license

[package]
edition = "2021"
name = "dpe-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
afl = { version = "0.17.0", optional = true }
libfuzzer-sys = { version = "0.4.6", optional = true }
log = "0.4.19"
simplelog = "0.12.1"
# https://github.com/time-rs/time/issues/681
# Once we move to a newer toolchain Cargo update should fix this.
time = "=0.3.36"

[dependencies.caliptra-dpe]
default-features = false
features = ["p256"]
path = ".."

[dependencies.caliptra-dpe-crypto]
default-features = false
features = ["rustcrypto"]
path = "../../crypto"

[dependencies.caliptra-dpe-platform]
default-features = false
features = ["rustcrypto"]
path = "../../platform"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
doc = false
name = "fuzz_target_1"
path = "src/fuzz_target_1.rs"
test = false
