# Licensed under the Apache-2.0 license

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cert-parser"
version = "0.1.0"
description = "Parser used to validate DPE certs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography",
    "pytest",
    "asn1crypto",
]

[tool.setuptools]
py-modules = ["dice_extensions", "test_certs"]
