# Licensed under the Apache-2.0 license

[package]
name = "panic-check"
version = "0.1.0"
edition = "2024"

[features]
default = ["hybrid", "std"]
std = ["anyhow", "elf"]
p256 = ["dpe/p256"]
p384 = ["dpe/p384"]
ml-dsa = ["dpe/ml-dsa"]
hybrid = ["p384", "ml-dsa"]
# Intentionally introduces panic-able code to verify the checker detects it.
# Build with this feature should FAIL the panic check.
should-fail = []

[[bin]]
name = "firmware"
path = "src/bin/firmware.rs"

[[bin]]
name = "checker"
path = "src/bin/checker.rs"
required-features = ["std"]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
elf = { version = "0.8.0", optional = true }
dpe = { path = "../../dpe" , package = "caliptra-dpe", default-features = false }
platform = { path = "../../platform", package = "caliptra-dpe-platform", default-features = false }
crypto = { path = "../../crypto", package = "caliptra-dpe-crypto", default-features = false, features = ["dummy"] }

[profile.firmware]
inherits = "release"
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1

[profile.firmware-check]
inherits = "release"
panic = "abort"
lto = "thin"           
opt-level = "s"
codegen-units = 1
strip = "none"
debug = 1

