# Licensed under the Apache-2.0 license

[package]
edition = "2024"
name = "panic-check-firmware"
version = "0.1.0"

[features]
cfi = [
  "dpe/cfi",
  "crypto/cfi",
  "caliptra-cfi-lib/cfi",
  "caliptra-cfi-lib/cfi-counter",
]
default = ["hybrid"]
hybrid = ["p384", "ml-dsa"]
ml-dsa = ["dpe/ml-dsa"]
p256 = ["dpe/p256"]
p384 = ["dpe/p384"]
# Intentionally introduces panic-able code to verify the checker detects it.
# Build with this feature should FAIL the panic check.
should-fail = []

[dependencies]
caliptra-cfi-derive = { workspace = true }
caliptra-cfi-lib = { workspace = true, default-features = false }
crypto = { path = "../../../crypto", package = "caliptra-dpe-crypto", default-features = false }
dpe = { path = "../../../dpe", package = "caliptra-dpe", default-features = false }
platform = { path = "../../../platform", package = "caliptra-dpe-platform", default-features = false }
